[gd_scene load_steps=3 format=2]

[ext_resource path="res://entities/triggers/music-trigger/music-trigger.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 26, 223 )

[node name="musicTrigger" type="Node2D"]
script = ExtResource( 1 )
type = 20

[node name="musicTriggerArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="musicTriggerCollider" type="CollisionShape2D" parent="musicTriggerArea"]
shape = SubResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -26.0
margin_top = -222.0
margin_right = 28.0
margin_bottom = 224.0
color = Color( 0.968627, 1, 0, 0.34902 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="body_entered" from="musicTriggerArea" to="." method="_on_musicTriggerArea_body_entered"]
